refactor: add index.ts

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "bin/www.ts",
-      "use": "@vercel/node"
+      "src": "build/index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["build/**"] }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "bin/www.ts"
+      "src": "/api/(.*)",
+      "dest": "build/index.js"
     }
   ]
 }
