--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production npx tsc -p tsconfig.prod.json",
-    "dev": "cross-env NODE_ENV=development tsc-watch -p ./tsconfig.json --onSuccess \"node ./build/bin/www.js\"",
-    "start": "cross-env NODE_ENV=production node build/bin/www.js",
+    "build": "rimraf build && tsc",
+    "prestart": "npm run build",
+    "dev": "cross-env NODE_ENV=development tsc-watch -p ./tsconfig.json --onSuccess \"node build/index.js\"",
+    "start": "node index.js",
     "test": "cross-env NODE_ENV=development npx jest --verbose",
     "lint": "eslint ./src/**/*.ts",
     "lint:fix": "eslint **/*.ts --fix",
@@ -55,7 +56,8 @@
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tsc-watch": "6.0.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "rimraf": "4.1.1"
   },
   "dependencies": {
     "@prisma/client": "4.2.1",
