--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/index.js",
+      "src": "index.ts",
       "use": "@vercel/node",
       "config": { "includeFiles": ["build/**"] }
     }
@@ -10,7 +10,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "build/index.js"
+      "dest": "index.ts"
     }
   ]
 }
